# libzakformgtk

./: .gitignore  Makefile.am  configure.ac  libzakformgtk.pc.in
debian/: changelog  control  copyright  gbp.conf  libzakformgtk-dev.install  libzakformgtk.install  rules
debian/patches/: 0001-Added-DESTDIR-support.patch  0002-Aclocal-old-version.patch  0003-Glib-old-version-macro-gobject.patch  series
src/: Makefile.am  form.c  form.h  formelement.c  formelement.h  formelementcheck.c  formelementcheck.h  formelementcombo.c  formelementcombo.h  formelemententry.c  formelemententry.h  formelementlabel.c  formelementlabel.h  formelementradio.c  formelementradio.h  formelementspin.c  formelementspin.h  formelementtextview.c  formelementtextview.h  libzakformgtk.h
tests/: Makefile.am  test.c  test.ui  test.xml
